# luna

./: .dev-v2-1-tracker.md  .gitignore  .gitmodules  .lycheeignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  deny.toml
crates/llvm-jit-probe/: Cargo.toml
crates/llvm-jit-probe/src/: lib.rs
crates/luna/: Cargo.toml
crates/luna-aot/: Cargo.toml  README.md
crates/luna-aot/src/: cli.rs  embed.rs  lib.rs  main.rs  runtime_stub.rs
crates/luna-aot/tests/: ao_pf_fire_measurement.rs  scaffold_smoke.rs  stage3_lower_into_object.rs  stage4_link_and_run.rs  stage5_cross_compile.rs  stage6_alpine_smoke.rs  stage7_aot_cross_compile_traces.rs  stage7_aot_helpers_in_staticlib.rs  stage7_aot_inlined_recursive.rs  stage7_aot_recursive_trace.rs  stage7_aot_trace_fires.rs  stage7_iconst_reloc.rs  stage7_msvc_link.rs  stage7_polish6_inline_side_exit_fire.rs  stage7_strkey_resolver.rs  stage7_trace_lower_into_object.rs  stage7_windows_aot.rs
crates/luna-core/: Cargo.toml
crates/luna-core/benches/: mem_baseline.rs
crates/luna-core/examples/: embed_min.rs
crates/luna-core/src/: lib.rs  numeric.rs  pattern.rs  version.rs
crates/luna-core/tests/: a4_prime_index_lhs_elision.rs  a4_prime_rhs_walker.rs  a4_triple_double_bundle.rs  a4_triple_prime_jump_target.rs  aot_trace_install.rs  async_hook_composition.rs  async_native.rs  c4_str_fastpath.rs  cb_edge_compiler_stress.rs  cb_edge_coroutine_hook.rs  cb_edge_gc_finalizer.rs  cv_aot_meta_walker.rs  cv_async_drive.rs  cv_pattern.rs  diff_puc.rs  e2e_programs.rs  eval_async.rs  gc_stress_plain.rs  gc_stress_poison.rs  heavy_lua_parser_budget.rs  host_roots_slot_recycling.rs  io_popen_double_close.rs  j_c_zero_cost_default.rs  lua_error_structured.rs  macro_lua.rs  native_typed.rs  official_run.rs  parse_official.rs  pi_a3_newindex_collapse.rs  proto_stable_hash.rs  puc_51_undump.rs  puc_52_undump.rs  puc_53_undump.rs  puc_54_undump.rs  puc_55_undump.rs  rust_coroutine.rs  rust_debug_hook.rs  sandbox_builder.rs  send_vm.rs  smoke.rs  (+10 more)
crates/luna-fuzz/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/luna-fuzz/fuzz_targets/: fuzz_aot_meta.rs  fuzz_diff_luajit.rs  fuzz_diff_puc.rs  fuzz_dump_reader.rs  fuzz_gc.rs  fuzz_parser.rs  fuzz_vm_dispatch.rs
crates/luna-jit/: Cargo.toml
crates/luna-jit-derive/: Cargo.toml
crates/luna-jit-derive/src/: lib.rs
crates/luna-jit-helpers/: Cargo.toml
crates/luna-jit-helpers/src/: lib.rs  scoped_rebind.rs
crates/luna-jit-llvm/: Cargo.toml
crates/luna-jit-llvm/src/: codegen.rs  lib.rs  storage.rs  trace.rs
crates/luna-jit-llvm/tests/: helpers_integration.rs  llvm_smoke.rs  probe_chunks.rs  trace_integration.rs
crates/luna-jit/benches/: README.md  bench_send_overhead.rs  cross_dialect.rs  lua_microbench.rs  redis_lua_shape.rs  run_only.rs
crates/luna-jit/examples/: async_host.rs  bench_1k_h_dict_5k.rs  bench_1k_h_fib28.rs  bench_a4_prime_token_bucket.rs  check_token_bucket_value.rs  diag_fib28_self_rec.rs  diag_fib28_wallclock_refresh.rs  diag_opcode_breakdown.rs  diag_opcode_breakdown_interp.rs  diag_polish6_inline_fire.rs  diag_r3c_downrec_dispatch.rs  diag_r3d_fib3_gain.rs  diag_token_bucket.rs  diag_v29_jit_engage.rs  embedding_quickstart.rs  macro_lua_demo.rs  perf_token_bucket_detailed.rs  perf_token_bucket_trace.rs  probe_design2_snapshot_walk.rs  probe_phase_1g_c_fire_count.rs  probe_sub2b_retroactive.rs  repl_lite.rs  runone.rs  samply_drv_fib28.rs  samply_drv_token_bucket.rs  sandbox_demo.rs  userdata_demo.rs  userdata_redis_stub.rs  userdata_vec3.rs
crates/luna-jit/perf-baselines/: v2.6.0-macos-arm64.json  v2.7.0-ubuntu-x86_64.json
crates/luna-jit/src/: capi.rs  lib.rs  lua_facade.rs
crates/luna-jit/tests/: ao_pf_counter_smoke.rs  capi.rs  cv_send_vm_jit_smoke.rs  j_a_send_jit_module_wrapper.rs  j_b_capi_storage_mismatch_no_sigabrt.rs  j_b_vm_jit_storage_field_migration.rs  j_d_scoped_rebind_and_sleeve.rs  jit_dialect_audit.rs  jit_trait_boundary.rs  lua_facade.rs  path_d_isle_dse_integration.rs  phase_1i_b_ic_scaffold.rs  phase_1i_b_ic_scaffold_off.rs  r1_retf_guards_fib28_p16on.rs  r2_close_cause_hygiene.rs  r3_3_sub0_selflink_relax.rs  r3_3_sub1_base_var_scaffold.rs  r3a_trace_end_downrec_emitted.rs  r3b_lowerer_stitch_sentinel.rs  r3c_dispatcher_stitch_dispatch.rs  r3d_multi_way_guard_dispatch.rs  sandbox.rs  trace_jit_audit.rs  trace_jit_p15_a_v0.rs  trace_jit_p15_a_v1.rs  trace_jit_p15_a_v2_a.rs  trace_jit_p2a_minmax_fold.rs  trace_jit_s1.rs  trace_jit_s10_step_a.rs  trace_jit_s10_step_b.rs  trace_jit_s11_step_a.rs  trace_jit_s11_step_b.rs  trace_jit_s11_step_b_v2.rs  trace_jit_s12_step_a.rs  trace_jit_s12_step_a_v2.rs  trace_jit_s12_step_a_v3.rs  trace_jit_s12_step_b.rs  trace_jit_s12_step_b_v2.rs  trace_jit_s12_step_b_v3.rs  trace_jit_s12_step_b_v4.rs  (+29 more)
crates/luna-runtime-helpers/: Cargo.toml
crates/luna-runtime-helpers/src/: lib.rs  windows_section.rs
crates/luna-runtime-helpers/tests/: jit_helper_symbol_expose.rs
crates/luna-tools/: Cargo.toml  README.md
crates/luna-tools/src/: lib.rs  schema.rs
crates/luna-tools/tests/: cli_smoke.rs
crates/luna-tools/workloads/: token_bucket_1k.lua
crates/luna/benches/: cross_dialect.rs  lua_microbench.rs  redis_lua_shape.rs  run_only.rs
crates/luna/examples/: async_host.rs  embedding_quickstart.rs  repl_lite.rs  runone.rs  sandbox_demo.rs  userdata_demo.rs
crates/luna/src/: capi.rs  lib.rs  lua_facade.rs
crates/luna/tests/: capi.rs  jit_dialect_audit.rs  jit_trait_boundary.rs  lua_facade.rs  sandbox.rs  trace_jit_audit.rs  trace_jit_p15_a_v0.rs  trace_jit_p15_a_v1.rs  trace_jit_p15_a_v2_a.rs  trace_jit_s1.rs  trace_jit_s10_step_a.rs  trace_jit_s10_step_b.rs  trace_jit_s11_step_a.rs  trace_jit_s11_step_b.rs  trace_jit_s11_step_b_v2.rs  trace_jit_s12_step_a.rs  trace_jit_s12_step_a_v2.rs  trace_jit_s12_step_a_v3.rs  trace_jit_s12_step_b.rs  trace_jit_s12_step_b_v2.rs  trace_jit_s12_step_b_v3.rs  trace_jit_s12_step_b_v4.rs  trace_jit_s12_step_b_v5.rs  trace_jit_s2c.rs  (+26 more)
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: diff_puc.rs  dispatch.rs  gc.rs  parse.rs
(+715 files in other folders)
