[workspace]
resolver = "2"
members = [
    "crates/luna-core",
    "crates/luna-jit",
]

[workspace.package]
version = "1.1.0"
edition = "2024"
# MSRV (G1): tracks the rustc that v1.0 shipped against. Bumping this
# is a minor-version change because embedders pinning to a specific
# rustc need a heads-up. CI matrix locks against this value.
rust-version = "1.86"
authors = ["GOLIA K.K. <lihao@golia.jp>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/goliajp/luna"
keywords = ["lua", "vm", "interpreter", "jit", "embedded"]
categories = ["compilers", "no-std"]

[profile.release]
# Enable LTO to allow cross-crate inlining of JIT helpers
# (luna_jit_upval_get, luna_jit_trace_materialize_frames, etc.) into
# the dispatcher hot path. codegen-units=16 (default) preserved
# because units=1 regressed loop_int_1m -10% (likely i-cache / less-
# flexible regalloc with a monolithic codegen unit).
#
# Trade-off: release build time ~5s → ~40s. Acceptable for shipped
# binaries; the `release-dbg` profile keeps lto=false for fast dev
# iteration.
lto = true
codegen-units = 16

[profile.release-dbg]
inherits = "release"
debug = true
strip = false
lto = false
codegen-units = 16
