[workspace]
resolver = "2"
members = [
    "crates/luna-core",
    "crates/luna-jit",
    # v1.3 UD3 — `#[derive(LuaUserdata)]` proc-macro. Lives as a
    # separate crate because Rust requires `proc-macro = true` to
    # be crate-level, AND because the luna-core 0-dep contract
    # forbids pulling in `syn`/`quote`/`proc-macro2` upstream of
    # luna-core. The derive emits fully-qualified `::luna_core::vm::*`
    # paths so it's reachable from pure-luna-core embedders too.
    "crates/luna-jit-derive",
    # v1.3 Phase AOT — `luna-aot` native-binary compile crate.
    # Sibling of luna-core + luna-jit. Pulls third-party deps
    # (`object`, `clap`) but **not into luna-core's tree** — the
    # 0-third-party-dep contract on luna-core is unaffected.
    # See `.dev/rfcs/v1.3-audit-luna-aot.md`.
    "crates/luna-aot",
    # v1.3 Phase AOT Stage 4 — `luna-runtime-helpers` staticlib that
    # `luna-aot`-produced binaries statically link against. Exposes
    # a single C-ABI entry `luna_aot_run(bytecode_ptr, len) -> i32`
    # driving a `luna-core` `Vm`. Depends only on `luna-core`; the
    # 0-third-party-dep contract on `luna-core` is unaffected.
    "crates/luna-runtime-helpers",
]

[workspace.package]
version = "1.3.0"
edition = "2024"
# MSRV (G1): tracks the rustc that v1.0 shipped against. Bumping this
# is a minor-version change because embedders pinning to a specific
# rustc need a heads-up. CI matrix locks against this value.
rust-version = "1.86"
authors = ["GOLIA K.K. <lihao@golia.jp>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/goliajp/luna"
keywords = ["lua", "vm", "interpreter", "jit", "embedded"]
categories = ["compilers", "no-std"]

[profile.release]
# Enable LTO to allow cross-crate inlining of JIT helpers
# (luna_jit_upval_get, luna_jit_trace_materialize_frames, etc.) into
# the dispatcher hot path. codegen-units=16 (default) preserved
# because units=1 regressed loop_int_1m -10% (likely i-cache / less-
# flexible regalloc with a monolithic codegen unit).
#
# Trade-off: release build time ~5s → ~40s. Acceptable for shipped
# binaries; the `release-dbg` profile keeps lto=false for fast dev
# iteration.
lto = true
codegen-units = 16

[profile.release-dbg]
inherits = "release"
debug = true
strip = false
lto = false
codegen-units = 16

# v1.2 L4-L6: workspace-wide lint policy. CI `cargo clippy -- -D warnings`
# fails on anything that isn't allowed here. Style nits are filtered out
# selectively; correctness / suspicious / complexity / unused / perf stay
# strict.
[workspace.lints.rust]
# Deny in CI: clippy's --deny defaults are added per-crate; rust lints
# stay at default (warn) so individual files can opt out with
# `#![allow(...)]` where there's a documented reason.

[workspace.lints.clippy]
# Internal unsafe fn surface is large (~250 raw-ptr deref sites in GC +
# JIT helpers) and SAFETY contracts live in `docs/unsafe-accounting.md`
# as the source of truth (not per-fn `# Safety` doc paragraphs that drift).
# Per-fn safety doc would add noise without raising signal.
missing_safety_doc = "allow"
# Doc list indentation lints fire on hand-formatted bullet lists where
# rustdoc's renderer is happy with either form. Cosmetic only.
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
# These trip on hot-path codegen patterns where idiomatic refactor would
# pessimize (per `perf-decomposition` methodology). Re-enable when the
# specific site is reviewed.
too_many_arguments = "allow"
type_complexity = "allow"
needless_range_loop = "allow"
# MSRV-related: we pin to rust-version = "1.86" so newer stable APIs
# warn when used. The workspace policy is to bump MSRV only on minor
# releases; meanwhile occasional MSRV warnings are acceptable.
incompatible_msrv = "allow"
