[workspace]
resolver = "2"
members = [
    "crates/luna-core",
    "crates/luna-jit",
    # v1.3 UD3 — `#[derive(LuaUserdata)]` proc-macro. Lives as a
    # separate crate because Rust requires `proc-macro = true` to
    # be crate-level, AND because the luna-core 0-dep contract
    # forbids pulling in `syn`/`quote`/`proc-macro2` upstream of
    # luna-core. The derive emits fully-qualified `::luna_core::vm::*`
    # paths so it's reachable from pure-luna-core embedders too.
    "crates/luna-jit-derive",
    # v1.3 Phase AOT — `luna-aot` native-binary compile crate.
    # Sibling of luna-core + luna-jit. Pulls third-party deps
    # (`object`, `clap`) but **not into luna-core's tree** — the
    # 0-third-party-dep contract on luna-core is unaffected.
    # See `.dev/rfcs/v1.3-audit-luna-aot.md`.
    "crates/luna-aot",
    # v1.3 Phase AOT Stage 4 — `luna-runtime-helpers` staticlib that
    # `luna-aot`-produced binaries statically link against. Exposes
    # a single C-ABI entry `luna_aot_run(bytecode_ptr, len) -> i32`
    # driving a `luna-core` `Vm`. Depends only on `luna-core`; the
    # 0-third-party-dep contract on `luna-core` is unaffected.
    "crates/luna-runtime-helpers",
    # v2.0 Track TL Phase 1 — `luna-tools` developer-facing CLIs
    # (`luna-bin-inspect`, `luna-heap-dump`, + 3 Phase-2 stub
    # binaries: `luna-profile`, `luna-trace-inspect`,
    # `luna-repl-polish`). Depends on `luna-jit` (which depends on
    # `luna-core`); pulls `clap` + `serde` + `object` for its own
    # surface but NOT into `luna-core`'s tree. The 0-third-party-dep
    # contract on `luna-core` is unaffected.
    "crates/luna-tools",
    # v2.1 Phase 1K.B — `llvm-jit-probe` standalone validation crate
    # for the LLVM 18 + inkwell 0.9.0 toolchain selected by Phase 1K.A
    # (see `.dev/rfcs/v2.1-phase-1k-a-llvm-jit-selection.md`). Crate is
    # `publish = false` and never enters the luna-core / luna-jit /
    # luna-aot dep graph — its sole purpose is to prove that the LLVM
    # JIT toolchain links + runs on the dev host before Phase 1K.C+
    # touches any production luna code. The 0-third-party-dep contract
    # on luna-core is unaffected.
    "crates/llvm-jit-probe",
    # v2.1 Phase 1K.D.1 — `luna-jit-helpers` shared `luna_jit_*`
    # extern-C runtime helpers + `JIT_VM` / `JIT_CL` per-thread TLS
    # slots + `enter_jit` RAII rebind, extracted from
    # `luna-jit/src/jit_backend/mod.rs`. Both `luna-jit` (Cranelift)
    # and `luna-jit-llvm` (v2.1 alt backend, Phase 1K.D.2+) depend on
    # this crate so the helper symbol table + TLS discipline stay
    # single-source-of-truth. Only depends on luna-core; the
    # 0-third-party-dep contract on luna-core is unaffected.
    "crates/luna-jit-helpers",
    # v2.1 Phase 1K.D.2 — `luna-jit-llvm` LLVM 18 + inkwell 0.9 alt
    # backend. Sibling of `luna-jit` (Cranelift); both implement the
    # `luna_core::jit` trait surface. `publish = false` — embedders
    # opt in via `luna-jit`'s `llvm-jit` cargo feature (default OFF).
    # Depends on `luna-core` + `luna-jit-helpers` + `inkwell`. The
    # 0-third-party-dep contract on `luna-core` is unaffected because
    # this crate is downstream of `luna-core`.
    "crates/luna-jit-llvm",
]
# v2.0 Track CV — `luna-fuzz` is a workspace-EXCLUDED sibling. It pulls
# `libfuzzer-sys` and requires nightly rustc; excluding it from the
# default member set keeps `cargo build --workspace` on stable and
# keeps the `zero-dep` luna-core gate trivially satisfied (libfuzzer
# never enters the cross-crate dep graph). To exercise the fuzz
# harnesses: `cd crates/luna-fuzz && cargo +nightly fuzz run <target>`.
exclude = [
    "crates/luna-fuzz",
    # v2.1 Path D Phase 1A — vendored fork of bytecodealliance/wasmtime
    # pinned at tag v37.0.3 (cranelift-codegen 0.124.3, exact match for
    # the registry version luna's Cargo.lock pins). The wasmtime tree
    # has its own [workspace] Cargo.toml; excluding it here keeps luna's
    # workspace-member resolution clean and prevents cargo from trying
    # to build wasmtime's many unrelated crates (wasmtime-runtime,
    # wasmtime-cli, etc.). The cranelift sub-crates are reachable only
    # through the [patch.crates-io] block at the bottom of this file,
    # which redirects luna-jit / luna-aot's `cranelift-*` deps at the
    # path inside this submodule.
    #
    # See `.dev/rfcs/v2.1-path-d-phase-1a-vendor-fork.md` for the full
    # pipeline setup rationale and Phase 1B handoff.
    "crates/vendored/wasmtime",
]

[workspace.package]
version = "2.1.0"
edition = "2024"
# MSRV (G1): tracks the rustc that v1.0 shipped against. Bumping this
# is a minor-version change because embedders pinning to a specific
# rustc need a heads-up. CI matrix locks against this value.
rust-version = "1.86"
authors = ["GOLIA K.K. <lihao@golia.jp>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/goliajp/luna"
keywords = ["lua", "vm", "interpreter", "jit", "embedded"]
categories = ["compilers", "no-std"]

[profile.release]
# Enable LTO to allow cross-crate inlining of JIT helpers
# (luna_jit_upval_get, luna_jit_trace_materialize_frames, etc.) into
# the dispatcher hot path. codegen-units=16 (default) preserved
# because units=1 regressed loop_int_1m -10% (likely i-cache / less-
# flexible regalloc with a monolithic codegen unit).
#
# Trade-off: release build time ~5s → ~40s. Acceptable for shipped
# binaries; the `release-dbg` profile keeps lto=false for fast dev
# iteration.
lto = true
codegen-units = 16

# v1.3 Stage 7 follow-on — dedicated profile for the
# `luna-runtime-helpers` staticlib build that the AOT pipeline
# (`luna-aot::embed::compile_and_link`) consumes. LTO must be OFF
# for this build because the staticlib's whole purpose is to expose
# the 27 `#[no_mangle] pub unsafe extern "C" fn luna_jit_*`
# Cranelift trace-mcode helpers as resolvable externals for the AOT
# binary's link step. With full LTO, the cross-crate optimizer
# correctly observes the helpers are never *called* from within the
# staticlib's Rust-side code path and strips their defining cgus
# from the rlib → staticlib bundle. The downstream AOT binary then
# fails to link with "undefined reference to
# `_luna_jit_table_get_field`" et al.
#
# Verified empirically: with `lto = "off"` here,
# `nm libluna_runtime_helpers.a | grep -c " T _luna_jit_"` reports
# 27; with workspace `lto = true` it reports 0.
#
# Cargo currently disallows `lto = ...` in `[profile.*.package.*]`
# overrides (cargo issue #9330), so the staticlib must be built in a
# dedicated profile rather than per-package. `luna-aot::embed`'s
# `cargo build` shell-out picks this profile via
# `--profile=release-aot-helpers` when building the staticlib.
#
# All other crates (luna-core, luna-jit's normal rlib, luna-aot
# itself) keep full LTO and the inlining performance wins it brings.
[profile.release-aot-helpers]
inherits = "release"
lto = "off"

[profile.release-dbg]
inherits = "release"
debug = true
strip = false
lto = false
codegen-units = 16

# v1.2 L4-L6: workspace-wide lint policy. CI `cargo clippy -- -D warnings`
# fails on anything that isn't allowed here. Style nits are filtered out
# selectively; correctness / suspicious / complexity / unused / perf stay
# strict.
[workspace.lints.rust]
# Deny in CI: clippy's --deny defaults are added per-crate; rust lints
# stay at default (warn) so individual files can opt out with
# `#![allow(...)]` where there's a documented reason.

# Allow project-defined custom cfg names. Each entry needs a one-line
# rationale; never widen to silence individual warnings.
#
# - `luna_aot_runtime_stub`: opt-in to compile `luna-aot::runtime_stub`
#   when the user-side Cargo bootstrap recipe links against the real
#   bytecode object set (`__luna_bytecode_start/end` bracket symbols).
#   Default builds and tests under MSVC skip the module because the
#   bracket symbols are linker-provided only in the AOT-produced
#   binary; MSVC's `link.exe` rejects unresolved externs even when
#   nothing references them.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(luna_aot_runtime_stub)"] }

[workspace.lints.clippy]
# Internal unsafe fn surface is large (~250 raw-ptr deref sites in GC +
# JIT helpers) and SAFETY contracts live in `docs/unsafe-accounting.md`
# as the source of truth (not per-fn `# Safety` doc paragraphs that drift).
# Per-fn safety doc would add noise without raising signal.
missing_safety_doc = "allow"
# Doc list indentation lints fire on hand-formatted bullet lists where
# rustdoc's renderer is happy with either form. Cosmetic only.
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
# These trip on hot-path codegen patterns where idiomatic refactor would
# pessimize (per `perf-decomposition` methodology). Re-enable when the
# specific site is reviewed.
too_many_arguments = "allow"
type_complexity = "allow"
needless_range_loop = "allow"
# MSRV-related: we pin to rust-version = "1.86" so newer stable APIs
# warn when used. The workspace policy is to bump MSRV only on minor
# releases; meanwhile occasional MSRV warnings are acceptable.
incompatible_msrv = "allow"

# v2.1 Path D Phase 1A — vendored cranelift fork.
#
# Goal: redirect every `cranelift-*` crate in luna's dep graph at the
# locally vendored copy under `crates/vendored/wasmtime/cranelift/`,
# so subsequent Path D phases (1B audit, 1C custom ISLE rewrite rule
# for intra-EBB `trusted + same-address + no-intervening-load` store-
# DCE, 1D-1F roll-out + perf validation) can patch cranelift source
# in-tree without forking crates.io publishing flow.
#
# Pin: wasmtime v37.0.3 (commit fb88a749bb), which ships exactly the
# `cranelift-* = "0.124.3"` registry versions luna's Cargo.lock pins.
# No semver bump in Phase 1A — this is plumbing only, no behaviour
# change expected. Phase 1A "passes" iff `cargo build --workspace`
# and `cargo test --workspace --lib` produce identical artefacts to
# the un-patched build.
#
# Crate-by-crate enumeration: all 17 cranelift crates that appear in
# luna's Cargo.lock are listed here, NOT just the 7 luna-jit / luna-aot
# directly depend on. Reason: cargo's lockfile pins every transitive
# `cranelift-*` against crates.io; patch entries only for the direct
# deps would leave the inner crates (cranelift-codegen-shared,
# cranelift-codegen-meta, cranelift-bforest, cranelift-entity, etc.)
# pulled from crates.io even though the patched cranelift-codegen
# resolves them via internal `path = "./shared"`-style references.
# Enumerating all 17 makes the patch hermetic.
#
# Upstream-source path map (Phase 1B audit will start from here):
#   cranelift                   → cranelift/umbrella
#   cranelift-assembler-x64     → cranelift/assembler-x64
#   cranelift-assembler-x64-meta→ cranelift/assembler-x64/meta
#   cranelift-bforest           → cranelift/bforest
#   cranelift-bitset            → cranelift/bitset
#   cranelift-codegen           → cranelift/codegen
#   cranelift-codegen-meta      → cranelift/codegen/meta
#   cranelift-codegen-shared    → cranelift/codegen/shared
#   cranelift-control           → cranelift/control
#   cranelift-entity            → cranelift/entity
#   cranelift-frontend          → cranelift/frontend
#   cranelift-isle              → cranelift/isle/isle
#   cranelift-jit               → cranelift/jit
#   cranelift-module            → cranelift/module
#   cranelift-native            → cranelift/native
#   cranelift-object            → cranelift/object
#   cranelift-srcgen            → cranelift/srcgen
#
# See `.dev/rfcs/v2.1-path-d-phase-1a-vendor-fork.md` for full audit
# trail (vendor strategy rationale, fork pipeline reproducibility,
# Phase 1B internal-file handoff list).
[patch.crates-io]
cranelift = { path = "crates/vendored/wasmtime/cranelift/umbrella" }
cranelift-assembler-x64 = { path = "crates/vendored/wasmtime/cranelift/assembler-x64" }
cranelift-assembler-x64-meta = { path = "crates/vendored/wasmtime/cranelift/assembler-x64/meta" }
cranelift-bforest = { path = "crates/vendored/wasmtime/cranelift/bforest" }
cranelift-bitset = { path = "crates/vendored/wasmtime/cranelift/bitset" }
cranelift-codegen = { path = "crates/vendored/wasmtime/cranelift/codegen" }
cranelift-codegen-meta = { path = "crates/vendored/wasmtime/cranelift/codegen/meta" }
cranelift-codegen-shared = { path = "crates/vendored/wasmtime/cranelift/codegen/shared" }
cranelift-control = { path = "crates/vendored/wasmtime/cranelift/control" }
cranelift-entity = { path = "crates/vendored/wasmtime/cranelift/entity" }
cranelift-frontend = { path = "crates/vendored/wasmtime/cranelift/frontend" }
cranelift-isle = { path = "crates/vendored/wasmtime/cranelift/isle/isle" }
cranelift-jit = { path = "crates/vendored/wasmtime/cranelift/jit" }
cranelift-module = { path = "crates/vendored/wasmtime/cranelift/module" }
cranelift-native = { path = "crates/vendored/wasmtime/cranelift/native" }
cranelift-object = { path = "crates/vendored/wasmtime/cranelift/object" }
cranelift-srcgen = { path = "crates/vendored/wasmtime/cranelift/srcgen" }
