[package]
name = "luna-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

# v2.4 Phase Fuzz scaffold. Out-of-workspace `[workspace]` table so
# luna-core's 0-third-party-dep contract stays intact — cargo tree
# -p luna-core is unaffected by libfuzzer-sys + arbitrary deps
# living in this crate.

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# Constrained-grammar input shaping (Phase Fuzz-B onwards via the
# `Arbitrary` derive).
arbitrary = { version = "1", features = ["derive"] }

[dependencies.luna-core]
path = "../crates/luna-core"

# Exclude from workspace — fuzz targets only build under
# `cargo fuzz run`, never as part of `cargo build` from the
# workspace root.
[workspace]

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false
