[package]
name = "luna-aot"
description = "Ahead-of-time compiler from Lua source to self-contained native binary, built on luna-core's VM. v1.3 scaffold ships the bytecode-embed pipeline (Lua source → luna bytecode dump → ELF/Mach-O/PE data section → linked binary); the Cranelift-lowered native trace codegen lands in follow-up sessions within the same v1.3 mega sprint. Embedders that want a runtime JIT keep using `luna-jit`; embedders that want pure interp keep using `luna-core`. `luna-aot` is a build-time tool, not a runtime dep of the produced binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
# rlib: programmatic embedders (build scripts, custom packagers).
# No cdylib/staticlib because luna-aot is a build tool, not a host lib.
crate-type = ["rlib"]

[[bin]]
name = "luna-aot"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Runtime + bytecode-format upstream. Pinned to the matching luna-core
# release so `cargo publish` lookups still resolve when the path
# fallback isn't in play.
luna-core = { path = "../luna-core", version = "= 2.2.0" }

# Object-file emission for the embedded bytecode section.
# `default-features = false` + the selected formats keeps the crate
# closure small; we don't need read support here.
object = { version = "0.36", default-features = false, features = ["write_std", "elf", "macho", "pe"] }

# CLI plumbing. Matches the rest of the v1.3 sprint's preference for
# `clap` derive (used by luna-jit in test fixtures and v1.3 phase doc
# tools) over hand-rolled parsing — luna-aot's CLI surface is larger
# than `luna` runner's so the maintenance trade-off favours `clap`.
clap = { version = "4", features = ["derive"] }

# v1.3 Phase AOT Stage 7 sub-piece 4 — trace recorder + AOT trace
# lowerer. `luna-jit` provides the warmup `Vm` (with Cranelift trace
# JIT backend installed) used by `compile_and_link` to harvest closed
# traces from a warmup script run; cranelift_object's `ObjectModule`
# is what `lower_trace_into_named` emits into per-trace .o bytes.
# Until this commit these were dev-deps; promoting them to prod
# deps for the end-to-end AOT-mcode-firing pipeline.
luna-jit = { path = "../luna-jit", version = "= 2.2.0" }
# v1.3 Phase AOT Stage 7 polish 4 — cross-compile AOT traces. The
# `all-arch` feature pulls in every Cranelift backend (x86_64, arm64,
# s390x, riscv64) so the offline trace lowerer can codegen for any
# `TargetSpec` the caller passes, not just the build host. Without
# this, `cargo build` on an aarch64 host only links arm64 codegen
# tables into cranelift-codegen and `--target x86_64-*` falls back
# to interp+JIT in the produced binary (the trace harvest skips on
# `isa::lookup` returning `SupportDisabled`). The extra backends add
# ~1 MB to luna-aot's binary; luna-aot is a build-time tool so this
# is invisible to deployed binaries.
cranelift-codegen = { version = "0.124", features = ["all-arch"] }
cranelift-module = "0.124"
cranelift-native = "0.124"
cranelift-object = "0.124"
# Triple parsing for `TargetSpec::cranelift_isa_builder`. Already a
# transitive dep through cranelift-codegen / cranelift-native; the
# direct dep here pins the version surface we depend on (`Triple::
# from_str`) and survives any future cranelift-internal refactor.
target-lexicon = "0.13"

[dev-dependencies]
tempfile = "3"
# Read-side `object` features for tests that parse the produced binary:
# - cross-compile test (`stage7_aot_cross_compile_traces`) walks
#   `luna_trace_meta` to count AOT trace entries
# - Windows COFF test (`stage7_windows_aot`) parses the produced .exe's
#   PE section table to verify `.lt_meta` / `.lt_skix` landed correctly
# Production code only writes; keeping `read` out of the runtime deps
# trims luna-aot's downstream surface.
object = { version = "0.36", features = ["read", "pe"] }
