[package]
# v2.0 Track CV — fuzz harness crate. Lives as a workspace-EXCLUDED
# sibling crate (see root `Cargo.toml`'s `[workspace] exclude`) so the
# default `cargo build --workspace` does NOT pull `libfuzzer-sys` or
# the nightly-only `-Z instrument-coverage` infrastructure into normal
# builds. To exercise:
#
#     cd crates/luna-fuzz
#     cargo +nightly fuzz run fuzz_parser
#
# The four harnesses cover the Phase 2 audit's bytecode/parser/dispatcher/
# AOT-meta attack surface. Per-track content fills in implementation
# phase add corpora + crash regression inputs.
name = "luna-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

# v2.0 Track CV-infra — empty [workspace] table makes this crate a
# standalone package so cargo doesn't walk up to the luna workspace
# manifest. Necessary because (a) cargo-fuzz expects standalone crate
# layout, and (b) the workspace [workspace.exclude] entry only matters
# for `cargo build --workspace` from the root; running `cargo +nightly
# fuzz` here would otherwise hit "current package believes it's in a
# workspace when it's not".
[workspace]

[dependencies]
# luna-core: pure-Rust VM, 0 third-party deps. Coverage on the parser,
# bytecode reader, dispatcher API is the whole point of these fuzzers.
luna-core = { path = "../luna-core" }
# luna-aot's `aot_meta` module lives in `luna-core::jit::aot_meta` so we
# don't pull luna-aot itself; the fuzz target exercises decode-side only.

# libfuzzer-sys: the only third-party dep, and ONLY active in this
# fuzz crate. luna-core's 0-third-party-dep contract is unaffected
# because luna-fuzz is workspace-excluded.
libfuzzer-sys = "0.4"

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dump_reader"
path = "fuzz_targets/fuzz_dump_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_vm_dispatch"
path = "fuzz_targets/fuzz_vm_dispatch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_aot_meta"
path = "fuzz_targets/fuzz_aot_meta.rs"
test = false
doc = false
bench = false
