[package]
name = "luna-jit-helpers"
description = "Shared `luna_jit_*` extern-C runtime helpers + per-thread JIT_VM/JIT_CL TLS slots + `enter_jit` RAII rebind. Used by both `luna-jit` (Cranelift) and `luna-jit-llvm` (v2.1 alt backend) so the helper symbol table and TLS discipline stay single-source-of-truth across JIT backends. Internal infrastructure crate; not a public embedder surface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# v2.1 Phase 1K.D.1 — helpers reach into Vm.heap, Vm.jit, Table, Gc,
# LuaClosure, Value, etc. luna-core owns those types; helpers only
# `pub use` them. The 0-third-party-dep contract on luna-core is
# unaffected because luna-jit-helpers is downstream of luna-core, not
# upstream.
luna-core = { path = "../luna-core", version = "= 1.3.0" }
