[package]
name = "luna-jit-helpers"
description = "Shared `luna_jit_*` extern-C runtime helpers + per-thread JIT_VM/JIT_CL TLS slots + `enter_jit` RAII rebind for the goliajp/luna Lua runtime. Used by both `luna-jit` (Cranelift backend) and `luna-jit-llvm` (LLVM alt backend) so the helper symbol table and TLS discipline stay single-source-of-truth across JIT backends. Internal infrastructure crate — embedders should depend on `luna-jit`, not this crate directly."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
# v2.1 Phase 1K.D.1 — helpers reach into Vm.heap, Vm.jit, Table, Gc,
# LuaClosure, Value, etc. luna-core owns those types; helpers only
# `pub use` them. The 0-third-party-dep contract on luna-core is
# unaffected because luna-jit-helpers is downstream of luna-core, not
# upstream.
#
# `version = "= 2.8.0"` pin matches the workspace version so the
# crates.io resolver picks the exact matching luna-core release when
# embedders bypass the `path` fallback (i.e. when this crate is pulled
# transitively from a published luna-jit).
luna-core = { path = "../luna-core", version = "= 2.8.0" }
